capa de interfaces para DAOs fase 6