@@ -1,3 +1,3 @@
 #!/bin/bash
 cd "$(dirname "$0")"
-java -Xmx1024m -Xms128m -jar target/Vendex-2.0-SNAPSHOT.jar "$@"
+java --enable-native-access=ALL-UNNAMED -Xmx1024m -Xms128m -jar target/Vendex-2.0-SNAPSHOT.jar "$@"
